--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "4   4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "193572  3.48   2258  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,18 +1468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "data[\"cut\"]=data[\"cut\"].map(cut_map)\n",
-    "data[\"clarity\"]=data[\"clarity\"].map(cut_map)\n",
-    "data[\"color\"]=data[\"color\"].map(cut_map)"
+    "data[\"clarity\"]=data[\"clarity\"].map(clarity_map)\n",
+    "data[\"color\"]=data[\"color\"].map(color_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1521,9 +1521,9 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>1.52</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>F</td>\n",
-       "      <td>VS2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>62.2</td>\n",
        "      <td>58.0</td>\n",
        "      <td>7.27</td>\n",
@@ -1535,9 +1535,9 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2.03</td>\n",
-       "      <td>Very Good</td>\n",
-       "      <td>J</td>\n",
-       "      <td>SI2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
        "      <td>62.0</td>\n",
        "      <td>58.0</td>\n",
        "      <td>8.06</td>\n",
@@ -1549,9 +1549,9 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>0.70</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>61.2</td>\n",
        "      <td>57.0</td>\n",
        "      <td>5.69</td>\n",
@@ -1563,9 +1563,9 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>0.32</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>61.6</td>\n",
        "      <td>56.0</td>\n",
        "      <td>4.38</td>\n",
@@ -1577,9 +1577,9 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>1.70</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>62.6</td>\n",
        "      <td>59.0</td>\n",
        "      <td>7.65</td>\n",
@@ -1592,15 +1592,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   id  carat        cut color clarity  depth  table     x     y     z  price\n",
-       "0   0   1.52    Premium     F     VS2   62.2   58.0  7.27  7.33  4.55  13619\n",
-       "1   1   2.03  Very Good     J     SI2   62.0   58.0  8.06  8.12  5.05  13387\n",
-       "2   2   0.70      Ideal     G     VS1   61.2   57.0  5.69  5.73  3.50   2772\n",
-       "3   3   0.32      Ideal     G     VS1   61.6   56.0  4.38  4.41  2.71    666\n",
-       "4   4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
+       "   id  carat  cut  color  clarity  depth  table     x     y     z  price\n",
+       "0   0   1.52    4      3        4   62.2   58.0  7.27  7.33  4.55  13619\n",
+       "1   1   2.03    3      7        2   62.0   58.0  8.06  8.12  5.05  13387\n",
+       "2   2   0.70    5      4        5   61.2   57.0  5.69  5.73  3.50   2772\n",
+       "3   3   0.32    5      4        5   61.6   56.0  4.38  4.41  2.71    666\n",
+       "4   4   1.70    4      4        4   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1660,9 +1660,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.52</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>F</td>\n",
-       "      <td>VS2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>62.2</td>\n",
        "      <td>58.0</td>\n",
        "      <td>7.27</td>\n",
@@ -1673,9 +1673,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.03</td>\n",
-       "      <td>Very Good</td>\n",
-       "      <td>J</td>\n",
-       "      <td>SI2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
        "      <td>62.0</td>\n",
        "      <td>58.0</td>\n",
        "      <td>8.06</td>\n",
@@ -1686,9 +1686,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.70</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>61.2</td>\n",
        "      <td>57.0</td>\n",
        "      <td>5.69</td>\n",
@@ -1699,9 +1699,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.32</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "      <td>61.6</td>\n",
        "      <td>56.0</td>\n",
        "      <td>4.38</td>\n",
@@ -1712,9 +1712,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.70</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>G</td>\n",
-       "      <td>VS2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
        "      <td>62.6</td>\n",
        "      <td>59.0</td>\n",
        "      <td>7.65</td>\n",
@@ -1727,15 +1727,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   carat        cut color clarity  depth  table     x     y     z  price\n",
-       "0   1.52    Premium     F     VS2   62.2   58.0  7.27  7.33  4.55  13619\n",
-       "1   2.03  Very Good     J     SI2   62.0   58.0  8.06  8.12  5.05  13387\n",
-       "2   0.70      Ideal     G     VS1   61.2   57.0  5.69  5.73  3.50   2772\n",
-       "3   0.32      Ideal     G     VS1   61.6   56.0  4.38  4.41  2.71    666\n",
-       "4   1.70    Premium     G     VS2   62.6   59.0  7.65  7.61  4.77  14453"
+       "   carat  cut  color  clarity  depth  table     x     y     z  price\n",
+       "0   1.52    4      3        4   62.2   58.0  7.27  7.33  4.55  13619\n",
+       "1   2.03    3      7        2   62.0   58.0  8.06  8.12  5.05  13387\n",
+       "2   0.70    5      4        5   61.2   57.0  5.69  5.73  3.50   2772\n",
+       "3   0.32    5      4        5   61.6   56.0  4.38  4.41  2.71    666\n",
+       "4   1.70    4      4        4   62.6   59.0  7.65  7.61  4.77  14453"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
